fix setHost for dcat and isBlank method (not compatible with docker java version